# FinTrack

./: .gitignore  CLAUDE.md  DB-Design.txt  LICENSE  Makefile  Procfile  Procfile.dev  Procfile.fe.dev  Procfile.sidekiq.dev  README.md
backend/: Gemfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260503_122648_remove_ticker_symbol_exchange_fund.py  20260503_183753_bank_short_name_max_6_chars_accounts_.py  20260503_183806_term_accounts_table.py  20260504_124023_account_balance_audit_table.py  20260504_124938_transaction_public_id_uuid_to_string.py  20260504_182657_backfill_transaction_date_from_created_.py  20260504_195408_revert_transaction_date_to_date_add_.py  20260504_221651_add_open_date_to_accounts.py  20260505_162335_user_currency_code_locale.py
backend/app/: cache.py  database.py  dependencies.py  main.py  seeds.py
backend/app/cli/: __init__.py  instruments.py  seed.py  term_accounts.py  transactions.py  users.py
backend/app/controllers/: application_controller.rb
backend/app/models/: __init__.py  account.rb  assistant_message.rb  bank.rb  current.rb  equity_holding.rb  folio.rb  follio.py  follio.rb  holding.rb  holding_snapshot.rb  import_batch.rb  import_record.rb  instrument.py  instrument.rb  instrument_price_history.rb  investment.py  investment.rb  platform.py  (+10 more)
backend/config/: application.rb  brakeman.ignore  credentials.yml.enc  database.yml  routes.rb  sidekiq.yml  sidekiq_cron.yml
backend/db/: schema.rb
backend/lib/: json_web_token.rb
backend/spec/: rails_helper.rb
backend/tests/: test_transactions.py
(+447 files in other folders)
